--- a/DataStructure/tree.yml
+++ b/DataStructure/tree.yml
@@ -1,10 +1,27 @@
 Trees:
     Ref: https://en.wikipedia.org/wiki/Template:CS_trees
 
+Full Binary Tree:
+    Definition: A BT that each node has exactly 0 or 2 children.
+    Ref: https://xlinux.nist.gov/dads//HTML/fullBinaryTree.html
+    Chinese: 满二叉树
+
+Complete Binary Tree:
+    Definition: A BT in which every level (depth), except possibly the deepest, is completely filled. At depth n, the height of the tree, all nodes must be as far left as possible.
+    Ref: https://xlinux.nist.gov/dads//HTML/completeBinaryTree.html
+    Chinese: 完全二叉树
+
+Perfect Binary Tree:
+    Definition: A BT with all leaf nodes at the same depth. All internal nodes have degree 2.
+    Ref: https://xlinux.nist.gov/dads//HTML/perfectBinaryTree.html
+    Chinese: 完美二叉树
+
 BST (Binary Search Tree):
-    Definition: left_subtree (keys)  ≤  node (key)  ≤  right_subtree (keys)
+    Definition: A BT that left_subtree (keys)  ≤  node (key)  ≤  right_subtree (keys)
+    Chinese: 二叉搜索树，二叉查找树
 
 Self-Balancing (a.k.a Height-Balanced) BST:
-    Definition: any node-based binary search tree that automatically keeps its height (maximal number of levels below the root) small in the face of arbitrary item insertions and deletions.
+    Definition: A BST that automatically keeps its height (maximal number of levels below the root) small in the face of arbitrary item insertions and deletions.
     E.g.: red-black-tree
     Ref: https://en.wikipedia.org/wiki/Self-balancing_binary_search_tree
+
